# zorba-excel-module

./: CMakeLists.txt
src/: CMakeLists.txt  datetime.xq  engineering.xq  information.xq  logical.xq  lookup.xq  math-sumproduct.xq  math.xq  statistical-zorba.xq  statistical.xq  text.xq
src/com/: CMakeLists.txt
src/com/zorba-xquery/: CMakeLists.txt
src/com/zorba-xquery/www/: CMakeLists.txt
test/ExpQueryResults/excel/lookup/: choose2.xml.res  hlookup2.xml.res  index4.xml.res  index5.xml.res  lookup2.xml.res  match2.xml.res  offset2.xml.res  offset3.xml.res  transpose1.xml.res  transpose2.xml.res
test/ExpQueryResults/excel/math/: abs4.xml.res  pi1.xml.res  power1.xml.res  power5.xml.res  sum1.xml.res  sumproduct1.xml.res  sumproduct10.xml.res  sumproduct11.xml.res  sumproduct12.xml.res  sumproduct13.xml.res  sumproduct14.xml.res  sumproduct15.xml.res  sumproduct16.xml.res  sumproduct17.xml.res  sumproduct18.xml.res  sumproduct19.xml.res  sumproduct20.xml.res  sumproduct21.xml.res  sumproduct22.xml.res  sumproduct23.xml.res  sumproduct24.xml.res  sumproduct25.xml.res  sumproduct26.xml.res  sumproduct27.xml.res  sumproduct28.xml.res  sumproduct29.xml.res  sumproduct3.xml.res  sumproduct30.xml.res  sumproduct4.xml.res  sumproduct5.xml.res  sumproduct6.xml.res  sumproduct7.xml.res  sumproduct8.xml.res  sumproduct9.xml.res
test/ExpQueryResults/excel/statistical/: average3.xml.res  max1.xml.res
test/Queries/excel/lookup/: choose1.xq  choose2.xq  hlookup1.xq  hlookup2.xq  hlookup3.xq  hlookup4.xq  hlookup5.xq  index1.xq  index2.xq  index3.xq  index4.xq  index5.xq  (+23 more)
(+478 files in other folders)
